--- a/pom.xml
+++ b/pom.xml
@@ -131,6 +131,19 @@
             <version>1.1.0</version>
         </dependency>
 
+        <!--导入Redis依赖-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-redis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-cache</artifactId>
+        </dependency>
+
+
+
     </dependencies>
 
     <build>
