--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,12 @@
             <artifactId>spring-boot-starter-cache</artifactId>
         </dependency>
 
-
+        <!--读写分离框架-->
+        <dependency>
+            <groupId>org.apache.shardingsphere</groupId>
+            <artifactId>sharding-jdbc-spring-boot-starter</artifactId>
+            <version>4.0.0-RC1</version>
+        </dependency>
 
     </dependencies>
 
