--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,12 @@
             <version>4.0.0-RC1</version>
         </dependency>
 
+        <!--knife4j接口管理-->
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+            <version>3.0.2</version>
+        </dependency>
     </dependencies>
 
     <build>
