--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -18,16 +18,16 @@ spring:
       master:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://121.89.200.204:3306/ruiji?characterEncoding=utf-8
+        url: jdbc:mysql://192.168.80.131:3307/ruiji?characterEncoding=utf-8
         username: root
-        password: 333
+        password: Root@123
       # 从数据源（读操作）
       slave:
         type: com.alibaba.druid.pool.DruidDataSource
         driver-class-name: com.mysql.cj.jdbc.Driver
-        url: jdbc:mysql://121.36.51.170:3306/ruiji?characterEncoding=utf-8
+        url: jdbc:mysql://192.168.80.132:3308/ruiji?characterEncoding=utf-8
         username: root
-        password: 333
+        password: Root@123
     masterslave:
       # 读写分离配置
       load-balance-algorithm-type: round_robin #轮询（如果有多个从库会轮询着读）
@@ -46,7 +46,7 @@ spring:
 
 
   redis:
-    host: localhost # 本地IP 或是 虚拟机IP
+    host: 127.0.0.1 # 本地IP 或是 虚拟机IP
     port: 6379
     #    password: root
     database: 0  # 默认使用 0号db
